Update and rename Creating_New_Dataclass_of_Pests.ipynb to Creating_New_Dataclass.ipynb

--- a/Creating_New_Dataclass.ipynb
+++ b/Creating_New_Dataclass.ipynb
@@ -21,7 +21,7 @@
         "id": "OLTQnConkGs5"
       },
       "source": [
-        "**INSECT DETECTION IN JUTE/any other crop**\n"
+        "**Creating new dataset of any dataclass**\n"
       ]
     },
     {
